# timed-rs

./: Cargo.toml  LICENSE  README.md  timing_results.csv
.github/workflows/: ci.yml
src/: lib.rs
timed/: Cargo.toml
timed-core/: Cargo.toml  timing_results.csv
timed-core/src/: lib.rs
timed-test/: Cargo.toml
timed-test/src/: main.rs
timed/src/: lib.rs
